Added French version in readme